[package]
name = "offline-election-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
frame-support = "43.0.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-ws-client = "0.26.0"
pallet-staking = "43.0.0"
parity-scale-codec = "3.7.5"
sp-core = "38.1.0"
sp-staking = "41.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
jsonrpsee-types = "0.26.0"
pallet-election-provider-multi-phase = "41.0.0"
sp-npos-elections = "39.0.0"
sp-runtime = "44.0.0"
clap = { version = "4.5.50", features = ["derive"] }
async-trait = "0.1.89"
mockall = "0.13.1"
log = "0.4.28"

[profile.dev]
incremental = true
